Add left navigation panel

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
                 <li class="menu-item"><a href="{{ '/contact' | relative_url }}" class="menu-link">Contact</a></li>
             </ul>
         </nav>
-        <main>
+        <main class="main-content">
             {{ content }}
         </main>
     </div>
