Add left navigation panel

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
             <h1><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h1>
         </div>
     </header>
-    <div class="content-wrapper">
+    <div class="content-wrapper main-flex-container">
         <nav class="left-menu">
             <div class="menu-header">
                 <h2>Navigation</h2>
