--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
             <ul class="menu-items">
                 <li class="menu-item"><a href="{{ '/' | relative_url }}" class="menu-link">Home</a></li>
                 <li class="menu-item"><a href="{{ '/about' | relative_url }}" class="menu-link">About Me</a></li>
-                <li class="menu-item"><a href="{{ '/cacophony' | relative_url }}" class="menu-link" id="cacophony-link">Cacophony</a></li>
+                <li class="menu-item"><a href="{{ '/cacophony' | relative_url }}" class="menu-link" id="cacophony-link">Notes</a></li>
                 <li class="menu-item"><a href="{{ '/podcasts' | relative_url }}" class="menu-link" id="podcasts-link">Podcasts</a></li>
                 <li class="menu-item"><a href="{{ '/contact' | relative_url }}" class="menu-link">Contact</a></li>
             </ul>
